# X11R8

./: .clang-format  .editorconfig  .gitignore  AUTHORS  README.md  meson.build  meson_options.txt
app/: meson.build
app/auto_box/: README
app/maze/: getopt.c
app/twm/: add_window.h  gc.c  gen_deftwmrc.sh  gram.y  list.h  menus.h  meson.build  parse.c  parse.h  resize.h  session.c  util.c
app/x11perf/: meson.build
app/xauth/: README.md  configure.ac  gethost.c  meson.build  parsedpy.c  process.c  xauth.c  xauth.h
app/xbindkeys/: get_key.c  get_key.h  grab_key.c  grab_key.h  keys.c  keys.h  meson.build  options.c  options.h  xbindkeys.c  xbindkeys.h
app/xclock/: Clock.c  Clock.h  ClockP.h  meson.build  xclock.c
app/xcmstest/: LibTest.c  TekCMS_LT.c  TestInit.c  meson.build
app/xev/: xev_old.c
app/xeyes/: meson.build
app/xgamma/: meson.build
app/xgas_old/: XGasP.h  main.c
app/xinit/: configure.ac  meson.build  startx  xinit.c  xinitrc
app/xkbcomp/: action.c  meson.build  utils.c  utils.h  xkbcomp.c
app/xli/: Imakefile  Makefile.std  TODO  bmp.c  bmp.h  bright.c  buildshar.c  clip.c  cmuwmrast.c  compress.c  copyright.h  ddxli.c  ddxli.h  dither.c  faces.c  fbm.c  fbm.h  fill.c  g3.c  g3.h  gif.c  gif.h  halftone.c  image.h  imagetypes.c  imagetypes.h  img.c  img.h  jpeg.c  kljcpyrght.h  mac.c  mac.h  mc_tables.c  mcidas.c  mcidas.h  merge.c  meson.build  misc.c  new.c  options.c  (+32 more)
app/xmodmap/: exec.c  handle.c  meson.build  pf.c  wq.h  xmodmap.c  xmodmap.h
app/xrdb/: meson.build  xrdb.c
app/xterm/: 256colres.h  88colres.h  COPYING  NEWS  TekPrsTbl.c  Tekparse.h  Tekproc.c  VTPrsTbl.c  VTparse.h  VTparse.hin  builtin_icons.h  button.c  cachedGCs.c  charclass.c  charclass.h  charproc.c  charsets.c  cursor.c  data.c  data.h  doublechr.c  error.h  fontutils.c  fontutils.h  graphics.c  graphics.h  graphics_regis.c  graphics_regis.h  graphics_sixel.c  graphics_sixel.h  html.c  input.c  keysym2ucs.c  keysym2ucs.h  linedata.c  main.c  main.h  menu.c  menu.h  meson.build  (+32 more)
data/pcf/: fonts.alias  fonts.dir  meson.build
demo/: meson.build
demo/auto_box/: auto_box.c  init_win.c  meson.build
demo/beach_ball/: beach_ball.c  init_win.c
demo/gpc/: bif_lex.c  bifbuild.c  bld_prim.c  brf_phead.c  db_tools.c  doentity.c  fakefigs.c  fillcont.c  gen_ents.c  init_bench.c  new_ents.c  stopwatch.c
demo/ico/: ico.c  meson.build
demo/maze/: getopt.c  maze.c  meson.build
demo/puzzle/: main.c  meson.build  picture.c  puzzle.c
demo/x11perf/: do_blt.c  do_simple.c  do_text.c  do_traps.c  do_tris.c  do_valgc.c  meson.build  x11perf.c  x11perf.h
demo/xaw/: list.c  menu.c  meson.build  scrollbar.c  simple.c  strip.c  viewport.c  xawhisto.c
demo/xcmstest/: LibTest.c  TekCMS_LT.c  TekCMS_TCI.c  TekCMS_TCI.h  TekCMSglob.c  TekCMSutil.c  TestInit.c  TestInit.h  meson.build
demo/xev/: meson.build  xev.c  xev_old.c
demo/xeyes/: Eyes.c  EyesP.h  meson.build  transform.c  xeyes.c
demo/xgamma/: meson.build  xgamma.c
demo/xgas/: Gas.c  Gas.h  GasP.h  XGas.ad  chamber.c  doc.c  doc.n  dynamics.c  help.c  main.c  man.c  meson.build  molecule.c  quick.c  quick.n  timestep.c  util.c  xgas.h
demo/xgas_old/: meson.build  timestep.c  util.c  xgas.h
demo/xgc/: COPYING  choice.c  configure.ac  dashlist.c  getfile.c  interpret.c  lex.l  main.c  meson.build  planemask.c  record.c  testfrac.c  tests.c  text.c
demo/xgetres/: README.md  meson.build  xgetres.c
doc/devbook/: meson.build
doc/man/: Xfixes.man  Xft.man  meson.build  xmodmap.man
driver/video/: meson.build
extension/include/: meson.build
extensions/: meson.build
extensions/dmx/: README.md  meson.build
extensions/include/: meson.build
extensions/xcomposite/: meson.build
extensions/xdamage/: meson.build
extensions/xext/: meson.build
extensions/xf86dga/: meson.build
extensions/xf86vm/: meson.build
extensions/xfixes/: meson.build
extensions/xi/: meson.build
extensions/xinerama/: meson.build
extensions/xkbfile/: meson.build
extensions/xrandr/: meson.build
extensions/xrender/: meson.build
extensions/xres/: meson.build
extensions/xss/: meson.build
extensions/xtst/: meson.build
extensions/xv/: meson.build
extensions/xvmc/: meson.build
include/: meson.build
include/GL/: glxint.h  glxmd.h  glxproto.h  glxtokens.h  meson.build
include/X11/: CallbackI.h  Composite.h  CompositeP.h  ConstrainP.h  Constraint.h  ConvertI.h  Core.h  CoreP.h  CreateI.h  DECkeysym.h  EventI.h  HPkeysym.h  HookObjI.h  ImUtil.h  InitialI.h  Intrinsic.h  IntrinsicI.h  IntrinsicP.h  Object.h  ObjectP.h  PassivGraI.h  RectObj.h  RectObjP.h  ResConfigP.h  ResourceI.h  SelectionI.h  Shell.h  ShellI.h  ShellP.h  StringDefs.h  Sunkeysym.h  ThreadsI.h  TranslateI.h  VarargsI.h  Vendor.h  VendorP.h  X.h  XF86keysym.h  XKBlib.h  XWDFile.h  (+36 more)
include/xcb/: bigreq.h  composite.h  damage.h  dbe.h  dpms.h  dri2.h  dri3.h  ge.h  glx.h  meson.build  present.h  randr.h  record.h  render.h  res.h  screensaver.h  shape.h  shm.h  sync.h  xc_misc.h  xcb.h  xcb_atom.h  xcb_aux.h  xcb_cursor.h  xcb_errors.h  xcb_event.h  xcb_icccm.h  xcb_image.h  xcb_keysyms.h  xcb_renderutil.h  xcbext.h  xevie.h  xf86dri.h  xf86vidmode.h  xfixes.h  xinerama.h  xinput.h  xkb.h  xprint.h  xproto.h  (+4 more)
lib/: meson.build
lib/example/: meson.build
lib/ice/: ICElibint.h  meson.build  process.c
lib/include/: meson.build
lib/sm/: meson.build
lib/test/: meson.build
lib/x11/: meson.build
lib/xau/: meson.build
lib/xaw/: TextPop.c  meson.build
lib/xaw3d/: README.md  configure.ac  meson.build
lib/xcb/: meson.build  xcb_gen_utils.sh
lib/xcursor/: meson.build
lib/xcvt/: meson.build
lib/xdmcp/: meson.build
lib/xft/: meson.build
lib/xmu/: meson.build
lib/xpm/: CrBufFrI.c  configure.ac  meson.build  scan.c
lib/xt/: meson.build
lib/xtrans/: Xtrans.c  meson.build
server/: meson.build  xorg-server.pc.in
server/Xext/: bigreq.c  dpms.c  geext.c  geext.h  geint.h  hashtable.h  meson.build  panoramiX.c  panoramiX.h  panoramiXSwap.c  panoramiXprocs.c  saver.c  security.c  securitysrv.h  shape.c  shm.c  shmint.h  sleepuntil.c  (+15 more)
(+4050 files in other folders)
